# server/common/api.yml
@@ -18,67 +18,67 @@ paths:
 
 
 
-  /compte:
+  /admin:
     get:
       tags:
-        - compte
-      description: trouver tous les comptes
+        - admin
+      description: trouver tous les admin
       responses:
         200:
-          description: trouver tous les comptes
+          description: trouver tous les admin
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Compte'
+                  $ref: '#/components/schemas/admin'
         4XX:
-          description: Compte not found
+          description: admin not found
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
         5XX:
-          description: Compte not found
+          description: admin not found
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
     post:
       tags:
-        - compte
-      description: Create a new Compte
+        - admin
+      description: Create a new admin
       requestBody:
-        description: an Compte
+        description: an admin
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Compte'
+              $ref: '#/components/schemas/admin'
         required: true
       responses:
         201:
-          description: Return the Compte with the specified id
+          description: Return the admin with the specified id
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Compte'
+                $ref: '#/components/schemas/admin'
         4XX:
-          description: Compte not found
+          description: admin not found
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
         5XX:
-          description: Compte not found
+          description: admin not found
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
 
-  /compte/login:
+  /admin/login:
     post:
       tags:
-        - compte
+        - admin
       description: Create a new login
       requestBody:
         description: an login
@@ -106,24 +106,24 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-  /compte/{id}:
+  /admin/{id}:
     get:
       tags:
-        - compte
+        - admin
       parameters:
         - name: id
           in: path
-          description: The id of the Compte to retrieve
+          description: The id of the admin to retrieve
           required: true
           schema:
             type: integer
       responses:
         200:
-          description: Return the Compte with the specified id
+          description: Return the admin with the specified id
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Compte'
+                $ref: '#/components/schemas/admin'
         4XX:
           description: Example not found
           content:
@@ -477,7 +477,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
         5XX:
-          description: Compte not found
+          description: date not found
           content:
             application/json:
               schema:
@@ -487,7 +487,7 @@ paths:
         - date
       description: Create a new date
       requestBody:
-        description: an Compte
+        description: an date
         content:
           application/json:
             schema:
@@ -495,7 +495,7 @@ paths:
         required: true
       responses:
         201:
-          description: Return the Compte with the specified id
+          description: Return the date with the specified id
           content:
             application/json:
               schema:
@@ -569,7 +569,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
         5XX:
-          description: Compte not found
+          description: admin not found
           content:
             application/json:
               schema:
@@ -579,7 +579,7 @@ paths:
         - date_action
       description: Create a new date_action
       requestBody:
-        description: an Compte
+        description: an admin
         content:
           application/json:
             schema:
@@ -587,7 +587,7 @@ paths:
         required: true
       responses:
         201:
-          description: Return the Compte with the specified id
+          description: Return the admin with the specified id
           content:
             application/json:
               schema:
@@ -1106,7 +1106,7 @@ components:
   schemas:
 
 
-    Compte:
+    admin:
       type: object
       properties:
         email:
@@ -1140,9 +1140,24 @@ components:
     employee:
       type: object
       properties:
+        email:
+          type: string
+          example: aaaaa@gmail.com
+        phone:
+          type: string
+          example: "+21621556"
+        password:
+          type: string
+          example: a123s1
         nom:
           type: string
-          example: foulen
+          example: amriii
+        id_admin:
+          type: number
+          example: 742685       
+        prenom:
+          type: string
+          example: dhaouuu
 
 
     loginn:
@@ -1276,7 +1291,7 @@ components:
           example: 09/04/2022
         lieu:
           type: string
-          example: 521
+          example: tafela
         nom_du_produit:
           type: string
           example: aaaaaaaa
